# RaspberryPi

./: .gitignore  README.md  Raspberry_PI_setup.md  pyproject.toml  requirments.txt
API/: Doorlock.py  config.json  main.py
API/static/css/: style.css  style_locked.css
API/static/js/: WebSocket.js  helper_scripts.js  scripts.js
API/templates/: index.html  locked.html  status.html
RaspberryPI/: Keypad.py  RFID.py  RFID_reader.py  config.json  doorLock.py  main.py  motor.py  test.py
RaspberryPI/RFID/: MFRC522.py
