[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DoorLock"
version = "0.1.0"
description = "A project to control a door lock using a Raspberry Pi."
author = [
  {name = "Max Konze", email = "max.konze@t-online.de"},
]

readme = "README.md"
license = {}
requires-python = ">=3.7"

[project.urls]
repository = "https://github.com/MaxKonze/RaspberryPi"

[project.dependencies]
gpiozero = "^1.6.2"
spidev = "^3.5"
asyncio = "^3.4.3"
websockets = "^10.1"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
requests = "^2.26.0"
jinja2 = "^3.0.2"
pydantic = "^1.8.2"

[tool.setuptools]
packages = ["DoorLock"]
include_package_data = true

[tool.setuptools.package-data]
"DoorLock" = ["static/*", "templates/*", "config.json"]

[tool.setuptools.scripts]
doorlock = "DoorLock.main:main"